fixed theme/talk/single.html as well!
see https://discourse.gohugo.io/t/serve-site-error-while-using-hugo-academic-and-blogdown-on-rstudio-for-mac/11881/14 and https://github.com/gcushen/hugo-academic/issues/534 for error fixing suggestions

--- a/themes/hugo-academic/layouts/partials/talk_links.html
+++ b/themes/hugo-academic/layouts/partials/talk_links.html
@@ -22,9 +22,11 @@
 </a>
 {{ end }}
 {{ range $.Params.projects }}
+{{ with ($.Site.GetPage "page" "project" .) }}
 <a class="btn btn-primary btn-outline{{ if $is_list }} btn-xs{{end}}" href="{{ ($.Site.GetPage "page" "project" .).Permalink }}">
   {{ i18n "btn_project" }}
 </a>
+{{ end }}
 {{ end }}
 {{ range $.Params.url_custom }}
 <a class="btn btn-primary btn-outline{{ if $is_list }} btn-xs{{end}}" href="{{ .url | absURL }}">
